tich hop api bao cao ekyc & api export

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -810,5 +810,5 @@
   "error.valid.password": "Password không được vượt quá 100 ký tự.",
   "time.authen": "Thời gian xác thực",
   "name.contract": "Tên HĐ",
-  "number.contract": "Mã HĐ"
+  "number.contract": "Số HĐ"
 }
