[Update - ConfigSmsEmail/BranchName] Code giao diện cấu hình/test branch name

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -791,5 +791,8 @@
   "error.unit.password.required": "Password is required",
   "error.valid.brandname": "Brandname cannot exceed 100 characters.",
   "error.valid.username": "Username cannot exceed 100 characters.",
-  "error.valid.password": "Password cannot exceed 100 characters."
+  "error.valid.password": "Password cannot exceed 100 characters.",
+  "config.brandname": "Config brandname",
+  "check.brandname": "Checking brandname",
+  "check.button": "Checking"
 }
