[Update - HsmDialog] Cập nhật giao diện, form data icorp hsm

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -804,5 +804,6 @@
   "content.sms.brandname":"[Notification] MobiFone eContract announces that the connection with the SMS Brandname has been completed. Thank you!",
   "validate.regex.brandname":"Brandname is not correct format",
   "validate.regex.phone":"Phone number is incorrect, please check again",
-  "content.sms.brand": "Content SMS"
+  "content.sms.brand": "Content SMS",
+  "password.blank": "Password cannot be blank"
 }
