--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -790,6 +790,7 @@
   "error.unit.brandname.required": "Brandname is required",
   "error.unit.username.required": "Username is required",
   "error.unit.password.required": "Password is required",
+  "error.supplier.required": "Supplier is required",
   "error.valid.brandname": "Brandname cannot exceed 100 characters.",
   "error.valid.username": "Username cannot exceed 100 characters.",
   "error.valid.password": "Password cannot exceed 100 characters.",
@@ -804,5 +805,7 @@
   "content.sms.brandname":"[Notification] MobiFone eContract announces that the connection with the SMS Brandname has been completed. Thank you!",
   "validate.regex.brandname":"Brandname is not correct format",
   "validate.regex.phone":"Phone number is incorrect, please check again",
-  "content.sms.brand": "Content SMS"
+  "content.sms.brand": "Content SMS",
+  "enter.supplier": "Choose supplier",
+  "check.config.brandname": "Please check the connection before saving the configuration"
 }
