[Update - SSO_PHASE_1] Cập nhật giao diện, logic liên kết tài khoản

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -827,5 +827,6 @@
   "enter.supplier": "Chọn nhà cung cấp",
   "check.config.brandname": "Vui lòng kiểm tra kết nối trước khi thực hiện lưu cấu hình",
   "password.blank":"Mật khẩu không được để trống",
-  "taxcode.not.match.hsm":"Mã số thuế/CMT/CCCD không trùng khớp thông tin ký hợp đồng"
+  "taxcode.not.match.hsm":"Mã số thuế/CMT/CCCD không trùng khớp thông tin ký hợp đồng",
+  "login.method.title": "Hoặc đăng nhập bằng"
 }
