--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -811,5 +811,6 @@
   "enter.supplier": "Choose supplier",
   "check.config.brandname": "Please check the connection before saving the configuration",
   "password.blank": "Password cannot be blank",
-  "taxcode.not.match.hsm":"Tax code/CMT/CCCD does not match contract signing information"
+  "taxcode.not.match.hsm":"Tax code/CMT/CCCD does not match contract signing information",
+  "login.method.title": "Or sign in with"
 }
