--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -8,6 +8,7 @@
   "notification": "Thông báo",
   "account": "Tài khoản",
   "login": "Đăng nhập",
+  "infor.login": "Nhập thông tin tài khoản để đăng nhập",
   "login.username": "Tên đăng nhập",
   "login.password": "Mật khẩu",
   "login.note.user": "Vui lòng đăng nhập bằng tài khoản và mật khẩu đã được cấp trong email/sđt của bạn",
@@ -26,9 +27,9 @@
   "document.user.use": "Hướng dẫn sử dụng",
   "document.plugin.pki": "Plugin ký Token",
   "menu.dashboard": "Trang chủ",
-  "menu.contract.add": "Tạo mới HĐ",
-  "menu.contract.create.list": "Hợp đồng đã tạo",
-  "menu.contract.receive.list": "Hợp đồng đã nhận",
+  "menu.contract.add": "Tạo mới",
+  "menu.contract.create.list": "Hợp đồng tạo",
+  "menu.contract.receive.list": "Hợp đồng nhận",
   "menu.contract.template.list": "Mẫu hợp đồng",
   "menu.contract.template": "Hợp đồng mẫu",
   "menu.user.list": "Người dùng",
@@ -630,6 +631,7 @@
   "not.photo":"Bạn chưa chọn ảnh",
   "mark.contract":"Đóng dấu hợp đồng",
   "customer.list":"Danh mục khách hàng",
+  "menu.customer.list":"Danh mục KH",
   "organization.customer":"Khách hàng tổ chức",
   "personal.customer":"Khách hàng cá nhân",
   "organization.customer.name":"Tên tổ chức",
@@ -828,5 +830,6 @@
   "check.config.brandname": "Vui lòng kiểm tra kết nối trước khi thực hiện lưu cấu hình",
   "password.blank":"Mật khẩu không được để trống",
   "taxcode.not.match.hsm":"Mã số thuế/CMT/CCCD không trùng khớp thông tin ký hợp đồng",
-  "login.method.title": "Hoặc đăng nhập bằng"
+  "login.method.title": "Hoặc đăng nhập bằng",
+  "footer_text":"Bản quyền thuộc về Trung tâm Công nghệ thông tin MobiFone thuộc TCT Viễn thông MobiFone"
 }
