[Update - Màn ký HĐ] Sửa/thêm chức năng tìm ô ký/ô thông tin

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -512,7 +512,7 @@
   "sign.image.otp":"Ký ảnh và OTP",
   "sign.image.ekyc":"Chữ ký ảnh hoặc eKYC",
   "sign.digital":"Chữ ký số",
-  "auto.scroll":"Tìm vị trí",
+  "auto.scroll":"Tìm ô thông tin",
   "preview":"Xem trước",
   "contract": "HỢP ĐỒNG",
   "partner": "ĐỐI TÁC",
