--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -813,5 +813,6 @@
   "password.blank": "Password cannot be blank",
   "taxcode.not.match.hsm":"Tax code/CMT/CCCD does not match contract signing information",
   "login.method.title": "Or sign in with",
-  "folder.search.placeholder": "Search by folder name, contract name, contract code, partner name"
+  "folder.search.placeholder": "Search by folder name, contract name, contract code, partner name",
+  "contract.enterPage": "Enter page number"
 }
