sửa thời gian cập nahajt  hợp đồng tạo

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -134,6 +134,13 @@
   "file.attach": "File attach",
   "note": "Note",
   "create-date": "Create date",
+  "create-time": "Create time",
+  "sign-expired-time": "Sign expiration time",
+  "refuse-time": "Refuse time",
+  "cancel-time": "Cancel time",
+  "complete-time": "Complete time",
+  "liquidated-time": "Liquidated time",
+  "time.update":"Update time",
   "expiration-date": "Expiration date",
   "createdate.start": "From date (create date)",
   "createdate.end": "To date (create date)",
