--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -136,6 +136,8 @@
   "create-date": "Create date",
   "create-time": "Create time",
   "sign-expired-time": "Sign expiration time",
+  "sign-time": "Sign time",
+  "share-time": "Share time",
   "refuse-time": "Refuse time",
   "cancel-time": "Cancel time",
   "complete-time": "Complete time",
