--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -137,6 +137,8 @@
   "create-date": "Ngày tạo",
   "create-time": "Thời gian tạo",
   "sign-expired-time": "Thời gian hết hạn ký",
+  "sign-time": "Thời gian ký",
+  "share-time": "Thời gian chia sẻ",
   "refuse-time": "Thời gian từ chối",
   "cancel-time": "Thời gian hủy bỏ",
   "complete-time": "Thời gian hoàn thành",
