--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -13,7 +13,7 @@
   "login.password": "Mật khẩu",
   "login.note.user": "Vui lòng đăng nhập bằng tài khoản và mật khẩu đã được cấp trong email/sđt của bạn",
   "login.forgot_password": "Quên mật khẩu",
-  "login.forgot_password.note": "Nhập địa chỉ email bạn đã sử dụng đăng ký trên MobiFone eContract",
+  "login.forgot_password.note": "Vui lòng nhập email đã đăng ký tài khoản",
   "signup": "Đăng ký",
   "signup.not_account": "Bạn chưa có tài khoản",
   "login.reset_password": "Đặt lại mật khẩu",
@@ -853,7 +853,7 @@
   "config.email.server.role": "Cấu hình Email Server",
   "mail.server.infor.success": "Cấu hình mail server thành công",
   "contract.enterPage": "Nhập số trang",
-  "footer_text":"Bản quyền thuộc về Trung tâm Công nghệ thông tin MobiFone thuộc TCT Viễn thông MobiFone",
+  "footer_text":"Bản quyền thuộc về Tổng công ty viễn thông MobiFone",
   "text.dashboard.theme": "Hợp đồng điện tử eContract đã giúp kết nối hơn 50.000 doanh nghiệp và cá nhân mỗi năm!",
   "request.process":"Yêu cầu cần xử lý",
   "package.document":"Gói tài liệu",
