--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -854,7 +854,7 @@
   "mail.server.infor.success": "Cấu hình mail server thành công",
   "contract.enterPage": "Nhập số trang",
   "footer_text":"Bản quyền thuộc về Tổng công ty viễn thông MobiFone",
-  "text.dashboard.theme": "Hợp đồng điện tử eContract đã giúp kết nối hơn 50.000 doanh nghiệp và cá nhân mỗi năm!",
+  "text.dashboard.theme": "Nếu bạn đang có tài liệu/ hợp đồng đang soạn, hãy tiếp tục hoàn thành để quá trình ký không bị chậm trễ!",
   "request.process":"Yêu cầu cần xử lý",
   "package.document":"Gói tài liệu",
   "package.used": "Đã dùng",
