Phân màu trạng thái cho HĐ nhận trong DS hđ nhận & fix bug background yêu cầu cần xử lý dashboard khi ít dữ liệu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -251,7 +251,7 @@
   "contract-type.code": "Contract type code",
   "contract-type.manage": "Manage",
   "sign.information": "Signature information",
-  "sign.file-image": "Image signature file",
+  "sign.file-image": "Signature image of SMS OTP",
   "sign.kpi": "PKI signature",
   "sign.hsm": "HSM signature",
   "image.empty": "No photo",
@@ -618,7 +618,7 @@
   "card.id.fail":"Citizen ID identification error",
   "fae.recog":"Face recognition",
   "push.image.fail":"Image file push failed",
-  "sign.file-image.mark":"Mark image",
+  "sign.file-image.mark":"Image of signature/digital stamp",
   "stamp.contract.questions":"Would you like to add a stamp photo to this contract?",
   "email.already.exist": "Email already exist",
   "phone.already.exist": "Phone already exist",
