--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -259,7 +259,7 @@
   "contract-type.code": "Mã loại hợp đồng",
   "contract-type.manage": "Quản lý",
   "sign.information": "Thông tin chữ ký",
-  "sign.file-image": "File ảnh chữ ký",
+  "sign.file-image": "Hình ảnh chữ ký hình thức SMS OTP",
   "sign.kpi": "Chữ ký PKI",
   "sign.hsm": "Chữ ký HSM",
   "image.empty": "Không có ảnh",
@@ -633,7 +633,7 @@
   "card.id.fail":"Nhận dạng căn cước công dân lỗi",
   "fae.recog":"Nhận dạng khuôn mặt",
   "push.image.fail":"Đẩy file ảnh không thành công",
-  "sign.file-image.mark":"Ảnh con dấu",
+  "sign.file-image.mark":"Hình ảnh chữ ký/con dấu ký số",
   "stamp.contract.questions":"Bạn có muốn gán thêm ảnh con dấu cho hợp đồng này không?",
   "email.already.exist": "Email đã có trong luồng xử lý",
   "phone.already.exist": "Số điện thoại đã có trong luồng xử lý",
