- Bổ sung thông tin ngày hết hạn dịch vụ ngoài dashboard & trong xem chi tiết tổ chức - Tích hợp tính năng ký sim pki có con dấu - Xử lý đa ngôn ngữ vào trong hệ thống - Fix lỗi không hiển thị ô text gán cho người tạo hợp đồng, khi tạo hđ theo mẫu (khi mẫu hđ có hình thức ký SIM; USB BCY; Remote Signing)

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -872,5 +872,8 @@
   "signed.usb.token": "Đã ký số bằng USB token",
   "signed.cert.server": "Đã ký bằng chứng thư số server",
   "signed.usb.bcy": "Đã ký số bằng USB token Ban Cơ Yếu",
-  "signed.romote.signing": "Đã ký số Remote Signing"
+  "signed.romote.signing": "Đã ký số Remote Signing",
+  "time.end.date.used.service": "Thời gian hết hạn sử dụng dịch vụ",
+  "end.date.service": "Ngày hết hạn sử dụng dịch vụ",
+  "contract.status.ceca": "Trạng thái CECA"
 }
