- Fix đa ngôn ngữ trong hệ thống - Fix bug mất ô số với loại ký pki, bcy, remote signing - Fix cho phép gia hạn ký đối với HĐ của tổ chức ( đang xử lý, sắp hết hạn, quá hạn)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -779,7 +779,8 @@
   "my.org.not.authen":"My organization's contract list is not yet authorized",
   "create.contract.success":"Create contract successfully!",
   "contract.no.existed":"The contract no is existed",
-  "note.update.person.processing":"Note: Information can only be updated once/ a participant in the processing flow",
+  "note.update.person.processing":"- Information can only be updated once/ a participant in the processing flow",
+  "note.process": "*Note:",
   "read.all.noti": "Read all",
   "read.all.success":"Read all notification successfully",
   "multi.delete.draft.success": "Delete multi draft contract successfully",
@@ -844,5 +845,27 @@
   "footer_text":"Copyright belong to MobiFone Corporation",
   "text.dashboard.theme": "If you have documents/contracts in progress, please continue to complete them to the signing process is not delayed!",
   "time.end.date.used.service": "Service expiration time",
-  "end.date.service": "Service expiration date"
+  "end.date.service": "Service expiration date",
+  "cancel.multi": "Cancel multi",
+  "btn.advance": "Advance",
+  "num.display": "Number of display",
+  "results": "results",
+  "of":"of",
+  "page":"page",
+  "request.process":"Request processing",
+  "package.document":"Document package",
+  "package.used": "Used",
+  "package.unused":"Un used",
+  "hello":"Hello",
+  "menu.customer.list":"Customer directory",
+  "search.code.number.name": "Contract code, Contract number, Contract name",
+  "view_all": "View all",
+  "edit.sign.time":"Edit sign time",
+  "view.processing.flow":"View processing flow",
+  "find.sign": "Find sign",
+  "note.usb.token.bcy": "- Signing USB Token BCY, Sim PKI and Remote Signing doesn't support enter text box/ contract number/ multiple signing box at the same time",
+  "enter.code.org": "Enter organization code",
+  "enter.name.org": "Enter organization name",
+  "update.last": "Last updated",
+  "seach.report.ekyc": "Search Full name,CMT/CCCD,Name-Code-Number of Contract" 
 }
