--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -421,8 +421,8 @@
   "choose.contract":"Chọn hợp đồng",
   "choose.contract.type":"Chọn loại hợp đồng",
   "side":"Bên",
-  "cancel":"Huỷ",
-  "cancel.multi":"Huỷ nhiều",
+  "cancel":"Hủy",
+  "cancel.multi": "Hủy nhiều",
   "btn.advance": "Nâng cao",
   "type_of_sign":"Loại ký",
   "sign_by_token":"Ký số bằng Token",
@@ -795,7 +795,8 @@
   "complete.time":"Thời gian hoàn thành",
   "create.contract.success":"Tạo hợp đồng thành công!",
   "contract.no.existed":"Số hợp đồng đã tồn tại",
-  "note.update.person.processing":"Lưu ý: Chỉ được cập nhật thông tin 5 lần/ người tham gia luồng xử lý",
+  "note.update.person.processing":"- Chỉ được cập nhật thông tin 5 lần/ người tham gia luồng xử lý",
+  "note.process": "*Lưu ý:",
   "read.all.noti": "Đọc tất cả",
   "read.all.success":"Đọc tất cả thông báo thành công",
   "multi.delete.draft.success": "Xóa nhiều hợp đồng bản nháp thành công",
@@ -878,5 +879,18 @@
   "contract.share.template.config":"Chia sẻ mẫu hợp đồng",
   "time.end.date.used.service": "Thời gian hết hạn sử dụng dịch vụ",
   "end.date.service": "Ngày hết hạn sử dụng dịch vụ",
-  "contract.status.ceca": "Trạng thái CECA"
+  "contract.status.ceca": "Trạng thái CECA",
+  "num.display": "Số lượng hiển thị",
+  "results": "kết quả",
+  "of":"của",
+  "page": "trang",
+  "hello":"Xin chào",
+  "search.code.number.name": "Tìm kiếm theo Mã HĐ, Số HĐ, Tên HĐ",
+  "view_all": "Xem tất cả",
+  "find.sign": "Tìm ô ký",
+  "note.usb.token.bcy": "- Ký USB Token Ban cơ yếu, Sim PKI và Remote Signing không hỗ trợ nhập ô text/số hợp đồng/ký nhiều ô ký cùng lúc",
+  "enter.code.org": "Nhập mã tổ chức",
+  "enter.name.org": "Nhập tên tổ chức",
+  "update.last": "Cập nhật lần cuối",
+  "seach.report.ekyc": "Tìm kiếm theo Họ tên, CMT/CCCD, Tên HĐ, Mã HĐ, Số HĐ"
 }
