--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -872,5 +872,15 @@
   "signed.usb.token": "Đã ký số bằng USB token",
   "signed.cert.server": "Đã ký bằng chứng thư số server",
   "signed.usb.bcy": "Đã ký số bằng USB token Ban Cơ Yếu",
-  "signed.romote.signing": "Đã ký số Remote Signing"
+  "signed.romote.signing": "Đã ký số Remote Signing",
+  "contract.info": "Thông tin hợp đồng",
+  "drag.contract.file": "Kéo thả hoặc tải lên file tài liệu/hợp đồng",
+  "drag.contract.here": "Tại đây",
+  "drag.contract.note": "Hỗ trợ file docx, pdf",
+  "xoa_doi_tac": "Xóa đối tác",
+  "componentsnew":"THÀNH PHẦN",
+  "sign.imagenew":"Chữ ký ảnh",
+  "btn.add.user.delete": "Xóa",
+  "drop.doc": "Kéo thả các trường thông tin dưới đây để thêm ô nhập hoặc ô ký vào tài liệu",
+  "location_size" : "Vị trí và kích thước"
 }
