Tối ưu giao diện POPUP màn KÝ HSM + CHi tiết luồng xử lý hợp đồng + popup Chọn hình ảnh chữ ký hoặc con dấu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -900,5 +900,6 @@
   "btn.add.user.delete": "Delete",
   "drop.doc": "Drag and drop the information fields below to add an input or signature box to the document",
   "location_size" : "Location and size",
-  "account.sign" : "Please enter account information to sign"
+  "account.sign" : "Please enter account information to sign",
+  "hsm.title" : "Select a signature or seal image"
 }
