--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -410,6 +410,7 @@
   "notify_have_not_sign_acc": "Bạn chưa có ảnh ký từ tài khoản!",
   "notify_have_not_sign_mark_acc": "Bạn chưa có ảnh con dấu từ tài khoản!",
   "contract_processing_flow": "Luồng xử lý hợp đồng",
+  "contract_processing_flow1": "LUỒNG XỬ LÝ HỢP ĐỒNG",
   "not_search_file_attach": "Không tìm thấy file đính kèm, vui lòng kiểm tra lại!",
   "typeOfSignEmail":"Đăng nhập bằng email",
   "email.valid":"Địa chỉ email không hợp lệ",
@@ -462,6 +463,7 @@
   "exit":"Thoát",
   "content.confirm":"Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?",
   "orginator":"Người khởi tạo",
+  "created":"Đã tạo",
   "delete.contract.question":"Bạn có chắc muốn xóa hợp đồng này không?",
   "choose.org":"Chọn tổ chức",
   "not.select.contract":"Bạn chưa chọn hợp đồng nào",
@@ -921,5 +923,6 @@
   "btn.add.user.delete": "Xóa",
   "drop.doc": "Kéo thả các trường thông tin dưới đây để thêm ô nhập hoặc ô ký vào tài liệu",
   "location_size" : "Vị trí và kích thước",
-  "account.sign" : "Vui lòng nhập thông tin tài khoản để thực hiện ký"
+  "account.sign" : "Vui lòng nhập thông tin tài khoản để thực hiện ký",
+  "hsm.title" : "Chọn hình ảnh chữ ký hoặc con dấu"
 }
