--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -901,5 +901,6 @@
   "drop.doc": "Drag and drop the information fields below to add an input or signature box to the document",
   "location_size" : "Location and size",
   "account.sign" : "Please enter account information to sign",
-  "hsm.title" : "Select a signature or seal image"
+  "hsm.title" : "Select a signature or seal image",
+  "drag.contract.theo_lo": "Hỗ trợ file XLS, XLSX"
 }
