thêm Tooltip +sửa Thông tin chi tiết mẫu hợp đồng + fix bug gia hạn nhiều nếu để trống k chọn ngày

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -902,5 +902,6 @@
   "location_size" : "Location and size",
   "account.sign" : "Please enter account information to sign",
   "hsm.title" : "Select a signature or seal image",
-  "drag.contract.theo_lo": "Hỗ trợ file XLS, XLSX"
+  "drag.contract.theo_lo": "Hỗ trợ file XLS, XLSX",
+  "many.extensions": "Many extensions"
 }
