--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -927,5 +927,6 @@
   "hsm.title" : "Chọn hình ảnh chữ ký hoặc con dấu",
   "drag.contract.theo_lo": "Hỗ trợ file XLS, XLSX",
   "errorSignTime": "Ngày hết hạn ký",
-  "not.draw.sign": "Hiển thị chữ ký OTP sau khi thao tác vẽ tay/ upload ảnh"
+  "not.draw.sign": "Hiển thị chữ ký OTP sau khi thao tác vẽ tay/ upload ảnh",
+  "many.extensions": "Gia hạn nhiều"
 }
