--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -928,5 +928,6 @@
   "drag.contract.theo_lo": "Hỗ trợ file XLS, XLSX",
   "errorSignTime": "Ngày hết hạn ký",
   "not.draw.sign": "Hiển thị chữ ký OTP sau khi thao tác vẽ tay/ upload ảnh",
-  "many.extensions": "Gia hạn nhiều"
+  "many.extensions": "Gia hạn nhiều",
+  "error.notTime": "Vui lòng chọn ngày hết hạn ký"
 }
